# UpGoerWriter

./: .dockerignore  .gitignore  Dockerfile  ModelLoader.py  README.md  WordReplacer.py  handler.py  pyproject.toml  requirements.txt
SpacyTranslation/: ModelLoader.py  __init__.py  cli.py
SparkTranslation/: get_lexicon_embedding.py  requirements.txt
lexicon/: __init__.py
scripts/: create_lambda_deployment.py  generateTwoGrams.py
spaCy/: ModelLoader.py  __init__.py
sparkML/: get_lexicon_embedding.py  similarity.py  test_document_summary.py
test/: 10_sentences_spacy.py
test/fixtures/: 10_sentences.txt
translators/: __init__.py
translators/BaseTranslator/: __init__.py
translators/BertTranslator/: BertTranslator.py  __init__.py
translators/SpacyTranslator/: SpacyTranslator.py  __init__.py  cli.py  load_model.py
