[tool.poetry]
name = "upgoerwriter"
version = "0.1.0"
description = ""
authors = ["David Jennens <d.jennens@gmail.com>"]
packages = [
    {include = "translators"},
    {include = "lexicon"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
boto3 = "^1.18.6"
spacy = "^3.1.1"
python-dotenv = "^0.18.0"
sparknlp = "^1.0.0"
pyspark = "^3.1.2"
transformers = "^4.9.0"
pandas = "^1.3.0"
torch = "^1.9.0"
fire = "^0.4.0"
textblob = "^0.15.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
